Rewrite entire render view for biome tool.